# JTQ-Custom

./: README.md  pyproject.toml  setup.py
jtq_custom/: attendance.py  compensatory_leave.py  hooks.py  master_utils.py  modules.txt  patches.txt  payroll.py
jtq_custom/jtq_custom/doctype/city/: city.js  city.json  city.py
jtq_custom/jtq_custom/doctype/jtq_bulk_attendance/: jtq_bulk_attendance.json  jtq_bulk_attendance.py  jtq_bulk_attendance_dashboard.py
jtq_custom/jtq_custom/doctype/jtq_bulk_attendance_employee/: jtq_bulk_attendance_employee.js  jtq_bulk_attendance_employee.json  jtq_bulk_attendance_employee.py
jtq_custom/jtq_custom/doctype/province/: province.json  province.py
jtq_custom/jtq_custom/doctype/work_mode/: work_mode.json  work_mode.py
jtq_custom/jtq_custom/print_format/bank_receipt_print_format/: bank_receipt_print_format.json
jtq_custom/jtq_custom/print_format/payment_voucher_print_format/: payment_voucher_print_format.json
jtq_custom/jtq_custom/report/employee_leave_balance/: employee_leave_balance.js  (+2 more)
jtq_custom/overrides/: payroll_entry.py  salary_slip.py  salary_structure.py
jtq_custom/patches/: add_advance_salary_recovery_controls.py  add_attendance_time_calculation_fields.py  add_bulk_attendance_custom_fields.py  add_compensatory_leave_working_hours_field.py  add_employee_location_work_mode_fields.py  add_payroll_entry_location_fields.py  add_salary_structure_auto_component_fields.py  update_custom_master_fields.py
jtq_custom/public/js/: attendance.js  attendance_list.js  jtq_bulk_attendance.js  payroll_entry.js  salary_structure.js
(+6 files in other folders)
