[project]
name = "jtq_custom"
authors = [
    { name = "JTQ", email = "admin@example.com" }
]
description = "JTQ Customizations for ERPNext and HRMS"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.bench.dev-dependencies]

[deploy.dependencies.apt]
packages = []

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
